Fix heading on mobile

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -14,8 +14,9 @@
       letter-spacing: 0;
     }
   
-    @media only screen and (min-width: 640px) {
-      font-size: $heading1Size;
+    @media only screen and (max-width: 640px) {
+      font-size: $heading2Size;
+      font-weight: $fontWeightLight;
     }
   }
 
